--- a/index.html
+++ b/index.html
@@ -9,18 +9,22 @@
 
 <body>
   <header>
-    <a href="#">WEBSTUDIO</a>
     <nav>
+  
+    <a href="./index.html">WebStudio</a>
+    
       <ul>
         <li><a href="#">Studio</a></li>
         <li><a href="#">Portfolio</a></li>
         <li><a href="#">Contacts</a></li>
       </ul>
     </nav>
-    <div>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+110001111111">+11 (000) 111-11-11</a>
-    </div>
+    <address>
+      <ul>                                  
+     <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+     <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+     </ul>
+    </address>
   </header>
 
   <main>
@@ -30,21 +34,22 @@
     </section>
 
     <section>
+      <h2>Advantages</h2>
       <ul>
         <li>
-          <h2>Strategy</h2>
+          <h3>Strategy</h3>
           <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
         </li>
         <li>
-          <h2>Punctuality</h2>
-          <p>Bring the key message to the brand’s audience for the best price within the shortest possible time.</p>
+          <h3>Punctuality</h3>
+          <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
         </li>
         <li>
-          <h2>Diligence</h2>
+          <h3>Diligence</h3>
           <p>Research and confirm brands with the strongest digital growth opportunities and minimize risk.</p>
         </li>
         <li>
-          <h2>Technologies</h2>
+          <h3>Technologies</h3>
           <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
         </li>
       </ul>
@@ -54,22 +59,22 @@
       <h2>Our Team</h2>
       <ul>
         <li>
-          <img src="./images/mark.jpg" alt="Марко Герреро — дизайнер продукту" width="320" />
+          <img src="./images/mark.jpg" alt="Марко Герреро — дизайнер продукту" width="264" />
           <h3>Mark Guerrero</h3>
           <p>Product Designer</p>
         </li>
         <li>
-          <img src="./images/tom.jpg" alt="Том Форд — фронтенд-розробник" width="320" />
+          <img src="./images/tom.jpg" alt="Том Форд — фронтенд-розробник" width="264" />
           <h3>Tom Ford</h3>
           <p>Frontend Developer</p>
         </li>
         <li>
-          <img src="./images/camila.jpg" alt="Каміла Гарсія — маркетолог" width="320" />
+          <img src="./images/camila.jpg" alt="Каміла Гарсія — маркетолог" width="264" />
           <h3>Camila Garcia</h3>
           <p>Marketing</p>
         </li>
         <li>
-          <img src="./images/daniel.jpg" alt="Даніель Вілсон — UI-дизайнер" width="320" />
+          <img src="./images/daniel.jpg" alt="Даніель Вілсон — UI-дизайнер" width="264" />
           <h3>Daniel Wilson</h3>
           <p>UI Designer</p>
         </li>
@@ -78,7 +83,7 @@
   </main>
 
   <footer>
-    <a href="#">WEBSTUDIO</a>
+    <a href="./index.html">WebStudio</a>
     <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
   </footer>
 </body>
